--- a/adminpanel/src/main/res/values/strings.xml
+++ b/adminpanel/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Admin Panel</string>
+    <string name="app_logo">App Logo</string>
+    <string name="application_name">Fooding Haven</string>
+    <string name="app_motto">Feels like magic...</string>
 </resources>
